# A2G

./: README.md
python/: __init__.py  client.py  messages.py  pyproject.toml  signer.py
rust/a2g-rust/: Cargo.toml
rust/a2g-rust/src/: did.rs  lib.rs  protocol.rs
typescript/a2g-sdk/: package-lock.json  package.json  tsconfig.json
typescript/a2g-sdk/src/: client.ts  types.ts
typescript/did-sdk/: index.ts  package-lock.json  package.json  tsconfig.json
typescript/did-sdk/src/: did.ts  signer.ts  types.ts
